--- a/DOM and Events Practice/index.html
+++ b/DOM and Events Practice/index.html
@@ -71,6 +71,6 @@
     <div id="sum">Result will be displayed here</div>
     <br />
     
-
+  <script src="./JS/scripts.js"></script>
   </body>
 </html>
