Animation added to the toggle

--- a/DOM and Events Practice/index.html
+++ b/DOM and Events Practice/index.html
@@ -74,3 +74,32 @@
   <script src="./JS/scripts.js"></script>
   </body>
 </html>
+
+ 
+
+<div class="radio-buttons id=radio-btn">
+  <p>Background color options:</p>
+  
+      <div>
+  
+          <input type="radio" name="color" value="blue" id="blue">
+  
+          <label for="blue">Blue</label>
+      </div>
+      <div>
+          <input type="radio" name="color" value="green" id="green">
+          <label for="green">Green</label>
+      </div>
+      <div>
+          <input type="radio" name="color" value="purple" id="purple">
+          <label for="purple">Puple</label>
+      </div>
+      <div>
+          <input type="radio" name="color" value="lightBlue" id="lightBlue">
+          <lightBlueabel for="l">Sunny Mode</lightBlueabel>
+      </div>
+      <div>
+          <input type="radio" name="color" value="Black" id="black">
+          <label for="black">Night Mode</label>
+      </div>
+</div>
