--- a/popUP2/form_validation/index.html
+++ b/popUP2/form_validation/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Form Practice</title>
   </head>
   <body>
     <form action="" id="form">
-      <h3 id="info">please provide your Name</h3>
+      <h3 id="info">Please Provide your Name</h3>
       <div class="form-item">
         <label for="fname">FirstName</label>
         <div>
@@ -25,6 +26,6 @@
       </div>
       <button type="submit" value="Submit">Submit</button>
     </form>
-    </script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
