--- a/jQuery-Practice/index.html
+++ b/jQuery-Practice/index.html
@@ -62,6 +62,7 @@
     <div id="sum">Result will be displayed here</div>
     <br />
     
-
+<script src="./JS/jquery-3.7.0.js"></script>
+<script src="./JS/script.js"></script>
   </body>
 </html>
